# flub

./: .clang-format  CMakeLists.txt  README.md
cmake/: add_executable_test.cmake  check_version.cmake  package_operate.cmake  target_if_include.cmake
src/flub/: errors.h  option.h  result.h  triats.h  types.h
tests/: CMakeLists.txt  test_flub.cc
third-part/: expected.h  optional.h  string_view.h
